# flask-multipass

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .readthedocs.yml  .travis.yml  CHANGES  CHANGES.rst  LICENSE  README.rst  all-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/utils/: check_version.py
.github/workflows/: pypi.yml  tests.yml
docs/: Makefile  api.rst  conf.py  config_example.rst  index.rst  my_documentation.rst  quickstart.rst
docs/_templates/: sidebarintro.html  sidebarlogo.html
example/: example.cfg.example  example.py  requirements.txt
example/templates/: base.html  group.html  index.html  login_form.html  login_selector.html
flask_multiauth/: __init__.py  _compat.py  auth.py  core.py  data.py  exceptions.py  group.py  identity.py  user.py  util.py
flask_multiauth/providers/: oauth.py  shibboleth.py  sqlalchemy.py  static.py
flask_multiauth/providers/ldap/: __init__.py  exceptions.py  globals.py  ldap.py  operations.py  providers.py  util.py
flask_multipass/: __init__.py  _compat.py  auth.py  core.py  data.py  exceptions.py  group.py  identity.py  util.py
flask_multipass/providers/: authlib.py  oauth.py  oidc.py  saml.py  shibboleth.py  sqlalchemy.py  static.py
flask_multipass/providers/ldap/: __init__.py  exceptions.py  globals.py  operations.py  providers.py  util.py
tests/: conftest.py  test_auth.py  test_core.py  test_data.py  test_identity.py  test_misc.py  test_user.py  test_util.py
tests/providers/ldap/: test_operations.py  test_providers.py  test_util.py
