[metadata]
name = Flask-Multipass
# TODO: only do this once we are py3-only - setuptools>=46.40 is needed for this
# to work without the package being importable at setup time!
# version = attr: flask_multipass.__version__
description = A pluggable solution for multi-backend authentication with Flask
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/indico/flask-multipass
license = BSD
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*
install_requires =
    Flask>=0.10.1  # TODO: bump this to the latest flask 1.x
    blinker

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-mock
authlib =
    authlib>=0.14.1,<=1.0.0a1
    requests
ldap =
    flask-wtf
    python-ldap>=3.3.1,<4.0
sqlalchemy =
    sqlalchemy
    flask-wtf

[options.packages.find]
include =
    flask_multipass
    flask_multipass.*

[options.entry_points]
flask_multipass.auth_providers =
    ldap = flask_multipass.providers.ldap:LDAPAuthProvider
    authlib = flask_multipass.providers.authlib:AuthlibAuthProvider
    shibboleth = flask_multipass.providers.shibboleth:ShibbolethAuthProvider
    static = flask_multipass.providers.static:StaticAuthProvider
flask_multipass.identity_providers =
    ldap = flask_multipass.providers.ldap:LDAPIdentityProvider
    authlib = flask_multipass.providers.authlib:AuthlibIdentityProvider
    shibboleth = flask_multipass.providers.shibboleth:ShibbolethIdentityProvider
    static = flask_multipass.providers.static:StaticIdentityProvider



[bdist_wheel]
universal = 1
